  - pci
    - PCI slot configuration added for 5 slots
    - PCI irq routing, irq sharing and level sensitive irq mode implemented
    - ne2k device appears as a Realtec 8029 NIC if connected to a PCI slot
    - PCI IDE controller dummy device added
  - serial
    - multiple serial port support added (4 ports now available)
    - partial raw serial support on win32 (transmit data)
  - parallel
    - multiple parallel port support added (2 ports now available)
  - vga
    - VBE 8 bit DAC support added
    - VBE memory now registered using DEV_register_memory_handlers()
  - floppy
    - raw floppy access now works on Win9x host (Ben Lunt)

- System BIOS
  - turn floppy motor off 2 seconds after last read/write/recalibrate command
    (Ben Lunt)
  - int13_cdrom / 32 bit register update fixes for FreeBSD cdrom boot
    (Fabrice Bellard)
  - APM and system shutdown support (Fabrice Bellard)

- display libraries
  - status bar with indicators for cdrom, floppy, harddisk and keyboard added
    (done in rfb, sdl, win32, wx and x)
  - 3rd (middle) mouse button now supported (sdl, win32, wx, x)
  - CTRL key + middle mouse button now used to toggle the mouse capture mode
    (sdl, win32, wx, x)
  - text mode split screen feature added (sdl, win32, wx, x)
  - new gui function returns the display library capabilities (xres, yres, bpp)
    for the Bochs VBE support
  - display library specific options added - currently supported:
    rfb:   timeout (time to wait for client connection)
    sdl:   fullscreen (startup in fullscreen mode)
    win32: legacyF12 (use F12 to toggle mouse)

- configuration interface
  - win32: gui runtime dialogs replace textconfig runtime dialogs
  - set default IPS to 10000000 in .bochsrc sample
  - SB16 options dmatimer and loglevel now available at runtime

- configure script / compile
  - --enable-ignore-bad-msr (ignore bad MSR references) option is enabled 
    by default
  - --enable-mmx enabled by default only if cpu-level > 4
